# proxim

./: .gitignore  README.md  SPEC.md  pyproject.toml
examples/: 01_quickstart.py  02_attacks_detected.py  03_reputation_over_time.py
src/proxim/: __init__.py  __main__.py  _canonical.py  agent.py  attestation.py  cli.py  crypto.py  errors.py  identity.py  policy.py  registry.py  reputation.py  verifier.py
tests/: test_attestation.py  test_crypto.py  test_end_to_end.py  test_identity.py  test_registry.py  test_reputation.py  test_verifier_policy.py
