[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxim"
version = "0.1.0"
description = "Trust infrastructure for AI agents: verifiable identity, tamper-evident attestations, and reputation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Muhammad Awais" }]
keywords = ["ai", "agents", "trust", "identity", "attestation", "reputation", "ed25519"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=41"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/miawais/proxim"
Source = "https://github.com/miawais/proxim"

[project.scripts]
proxim = "proxim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
